packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_sceptre_crafted.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/rare_sceptre_crafted.txt
---
Item {
    item_class: "Sceptres",
    rarity: Rare,
    name: Some(
        "Behemoth Star",
    ),
    base_type: Some(
        "Omen Sceptre",
    ),
    item_level: Some(
        82,
    ),
    quality: Some(
        20,
    ),
    requirements: Requirements {
        level: Some(
            78,
        ),
        strength: Some(
            42,
        ),
        dexterity: None,
        intelligence: Some(
            106,
        ),
    },
    sockets: Some(
        "S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Spirit",
            value: "100",
        },
        Property {
            name: "Grants Skill",
            value: "Level 18 Malice",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Blasting",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Damage",
                "Elemental",
                "Fire",
                "Attack",
            ],
            stats: [
                "Allies in your Presence deal 23(20-24) to 31(31-38) added Attack Fire Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Discharging",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Damage",
                "Elemental",
                "Lightning",
                "Attack",
            ],
            stats: [
                "Allies in your Presence deal 1(1-3) to 60(48-59) added Attack Lightning Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: Some(
                Crafted,
            ),
            name: Some(
                "Motivating",
            ),
            tier: Some(
                3,
            ),
            tags: [
                "Damage",
            ],
            stats: [
                "Allies in your Presence deal 65(75-89)% increased Damage",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Slavedriver",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Minion",
                "Gem",
            ],
            stats: [
                "+3(4) to Level of all Minion Skills",
            ],
        },
        Modifier {
            kind: Suffix,
            source: Some(
                Desecrated,
            ),
            name: Some(
                "of Adjustment",
            ),
            tier: Some(
                6,
            ),
            tags: [
                "Elemental",
                "Fire",
                "Cold",
                "Lightning",
                "Resistance",
            ],
            stats: [
                "Allies in your Presence have +3(3-5)% to all Elemental Resistances",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Philosopher",
            ),
            tier: Some(
                4,
            ),
            tags: [
                "Attribute",
            ],
            stats: [
                "+20(21-24) to Intelligence",
            ],
        },
    ],
    flavour_text: [],
    notes: [
        "~b/o 5 exalted",
    ],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [
        "Sanctified",
    ],
}
