packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@relic_unidentified.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/relic_unidentified.txt
---
Item {
    item_class: "Relics",
    rarity: Unique,
    name: None,
    base_type: Some(
        "Amphora Relic",
    ),
    item_level: Some(
        82,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: true,
    fractured: false,
    flags: [],
}
