packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unidentified_sceptre.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/unidentified_sceptre.txt
---
Item {
    item_class: "Sceptres",
    rarity: Rare,
    name: None,
    base_type: Some(
        "Superior Rattling Sceptre",
    ),
    item_level: Some(
        72,
    ),
    quality: Some(
        6,
    ),
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: Some(
            113,
        ),
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Spirit",
            value: "100",
        },
        Property {
            name: "Grants Skill",
            value: "Level 15 Skeletal Warrior Minion",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: true,
    fractured: false,
    flags: [],
}
