packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_charm.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/unique_charm.txt
---
Item {
    item_class: "Charms",
    rarity: Unique,
    name: Some(
        "Breath of the Mountains",
    ),
    base_type: Some(
        "Sapphire Charm",
    ),
    item_level: Some(
        80,
    ),
    quality: Some(
        10,
    ),
    requirements: Requirements {
        level: Some(
            5,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Used when you take Cold damage from a Hit — Unscalable Value",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Charm",
            ],
            stats: [
                "Grants a Power Charge on use — Unscalable Value",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "13(15-10)% reduced Charges per use",
            ],
        },
    ],
    flavour_text: [
        "To scrape the sky,\nto touch the clouds themselves,\nis to know true freedom.\"\n- Mutewind saying",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
