packaging/arch/src/Kingsmerchant-0.9.2/crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_helmet.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/unique_helmet.txt
---
Item {
    item_class: "Helmets",
    rarity: Unique,
    name: Some(
        "Innsmouth",
    ),
    base_type: Some(
        "Shabby Hood",
    ),
    item_level: Some(
        22,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Evasion Rating",
            value: "44 (augmented)",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Other(
                "Corruption Enhancement",
            ),
            source: None,
            name: None,
            tier: None,
            tags: [
                "Attack",
            ],
            stats: [
                "+60(50-100) to Accuracy Rating",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Elemental",
                "Cold",
                "Resistance",
            ],
            stats: [
                "+11(10-20)% to Cold Resistance",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Chaos",
                "Resistance",
            ],
            stats: [
                "+15(13-19)% to Chaos Resistance",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Mana",
            ],
            stats: [
                "25% reduced maximum Mana",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Mana",
            ],
            stats: [
                "100% increased Mana Regeneration Rate",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Evasion",
            ],
            stats: [
                "+25(20-30) to Evasion Rating",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: true,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
